align issue

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -93,4 +93,5 @@
 #div-gpt-ad-1738058472013-0{
   display: flex;
   align-items:center ;
+  justify-content: center;
 }
